# uvcookie

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
tests/: test_foo.py
